# notes-app

./: .agentrules  .env.example  .gitignore  README.md  add_plugins.ps1  add_plugins_sequential.ps1  build_log.txt  docker-compose.studio.yml  docker-compose.yml  index.html  init_tauri.ps1  package-lock.json  package.json  run_dev.ps1  tsconfig.electron.json  vite.config.ts  vitest.config.ts  vps-setup.sh
.agents/workflows/: pull.md  push.md  release.md  repair.md  test.md
.github/workflows/: release.yml
dist-electron/: main.js  preload.js
electron/: main.js  main.ts  preload.ts
src/: App.tsx  index.css  main.tsx  prism-theme.css  refractor.d.ts  types.ts
src-tauri/: 2  Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: git.rs  github.rs  lib.rs  store.rs  supabase_sync.rs
src/__tests__/: MobileSwipeContainer.test.tsx  NoteList.test.tsx  TitleBar.test.tsx  connectivity.test.ts  noteCollision.test.ts  path.test.ts  sessionValidation.test.tsx  setup.ts  sync.test.ts  syncImprovements.test.ts  useSettings.test.ts  useSidebarGestures.test.tsx
src/components/: AppErrorBoundary.tsx  CodeBlockComponent.tsx  ConflictModal.tsx  DeleteFolderModal.tsx  Editor.tsx  EditorToolbar.tsx  FolderEditModal.tsx  MarkdownEditor.tsx  MobileSwipeContainer.tsx  NoteList.tsx  OnboardingScreen.tsx  PGliteWrapper.tsx  QuickNote.tsx  ResizableImageNode.tsx  SettingsModal.tsx  Sidebar.tsx  SyncStatusBadge.tsx  TableHoverToolbar.tsx  TableNode.tsx  TitleBar.tsx  (+3 more)
(+22 files in other folders)
