[package]
name = "app"
version = "0.7.6"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-log = "2.0.0"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
notify = "8.0.0"
chrono = "0.4"
rustls = { version = "0.23", features = ["ring"] }

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
tauri-plugin-store = "2"
tauri-plugin-os = "2"
tokio = { version = "1", features = ["time"] }
base64 = "0.22.1"
filetime = "0.2"

# Desktop-only dependencies (not needed on iOS/Android)
[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
git2 = { version = "0.19", features = ["vendored-libgit2", "https", "vendored-openssl"] }

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.dependencies]
git2 = { version = "0.19", features = ["vendored-libgit2", "https"] }
